--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title">WeChat Buddy</string>
+    <string name="selectText">Please select a QR code to transfer</string>
+    <string name="about">About this app</string>
 </resources>
