--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">WeChatBuddy</string>
+    <string name="app_name">QRBuddy for Pebble</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title">WeChat Buddy</string>
-    <string name="selectText">Please select a QR code to transfer</string>
+    <string name="title">QR Buddy</string>
+    <string name="promptText">Please select a QR code to transfer</string>
     <string name="about">About this app</string>
+    <string name="galleryButton">Gallery</string>
+    <string name="QRCodeIMG">QRCode</string>
 </resources>
