--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="about">About this app</string>
     <string name="galleryButton">Gallery</string>
     <string name="QRCodeIMG">QRCode</string>
+    <string name="title_activity_about_app">About App</string>
 </resources>
